# TaskSense

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  settings.json
app/: __init__.py
app/agent/: __init__.py  conversation.py  llm_client.py  orchestrator.py  preload.py
app/agent/prompts/: auto_acceptance.md  auto_classify.md  auto_schedule.md  generate_outline.md  generate_reports.md  generate_tasks.md  normal_mode.md  strict_mode.md  system.md  task_review.md  tool_use.md
app/agent/tools/: __init__.py  (+3 more)
app/config/: __init__.py  constants.py  settings.py  settings_manager.py  theme.py
app/core/: events.py  logging.py  state.py  validators.py
app/data/: board_state.json
app/knowledge/: __init__.py  chunker.py  embedder.py  loader.py  pipeline.py  retriever.py  store.py
app/ui/: app.py
data/: employees.json  logs.json
docs/: AGENT_TOOLS.md  AGENT_UI.md  AI_TOOLS_STATUS.md  ARCHITECTURE_BACKEND.md  ARCHITECTURE_FRONTEND.md  ARCHITECTURE_OVERVIEW.md  BL.md  BUTTON_STYLES.md  DEVLOG_20260703.md  DOMAIN_REFERENCE.md  OVERLAY_DIMMER.md  PHASE5_PLAN.md  PROJECT_GOALS.md  PROTOTYPE.md  TASK_INFO.md  UI.md  UI_DESIGN_INSPIRATION.md  WORKFLOW.md
scripts/: agent_demo.py  build_kb.py  extract_worker.py
tests/: conftest.py
tests/test_agent/: test_kb_queries.py
tests/test_core/: test_config.py  test_models.py  test_models_edge.py  test_service_edge.py  test_services.py  test_state.py  test_state_edge.py
tests/test_knowledge/: test_chunker.py  test_embedder.py  test_loader.py  test_pipeline.py  test_retriever.py  test_store.py
(+41 files in other folders)
