[project]
name = "tasksense"
version = "0.1.0"
description = "航空维护智能看板系统 — RAG + Agent 增强的 Kanban 工具"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["aviation", "maintenance", "kanban", "rag", "agent", "langchain"]
authors = [{ name = "YT_Minro" }]

dependencies = [
    "flet==0.28.3",
    "flet-desktop==0.28.3",
    "langchain==1.3.11",
    "langchain-core==1.4.8",
    "langchain-protocol==0.0.18",
    "langgraph==1.2.6",
    "langgraph-checkpoint==4.1.1",
    "langgraph-prebuilt==1.1.0",
    "langgraph-sdk==0.4.2",
    "langsmith==0.9.1",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "anyio==4.14.1",
    "certifi==2026.6.17",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "orjson==3.11.9",
    "packaging==26.2",
    "PyYAML==6.0.3",
    "requests==2.34.2",
    "tenacity==9.1.4",
    "uuid-utils==0.16.2",
    "websockets==16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
